<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/avatar"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.062"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_name"
        style="@style/TextContent.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/img_item_avatar"
        android:textSize="16sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="@+id/img_item_avatar"
        card_view:layout_constraintTop_toBottomOf="@+id/img_item_avatar"
        tools:text="@string/name_user" />

    <TextView
        android:id="@+id/tv_item_username"
        style="@style/TextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:lines="1"
        card_view:layout_constraintBottom_toTopOf="@+id/img_item_avatar"
        card_view:layout_constraintStart_toStartOf="@+id/img_item_avatar"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.521"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_item_company"
        style="@style/TextContent.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/company"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    <TextView
        android:id="@+id/tv_item_location"
        style="@style/TextContent.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tlocation"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_company"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_company" />

    <TextView
        android:id="@+id/tv_text_repository"
        style="@style/TextContent.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/trepository"
        android:textSize="11sp"
        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_repository"
        card_view:layout_constraintHorizontal_bias="0.529"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_repository"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_repository" />

    <TextView
        android:id="@+id/tv_text_followers"
        style="@style/TextContent.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/tfollowers"
        android:textSize="11sp"
        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_followers"
        card_view:layout_constraintHorizontal_bias="0.529"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_followers"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_repository" />

    <TextView
        android:id="@+id/tv_text_following"
        style="@style/TextContent.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/tfollowing"
        android:textSize="11sp"
        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_following"
        card_view:layout_constraintHorizontal_bias="0.529"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_following"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_repository" />

    <TextView
        android:id="@+id/tv_item_followers"
        style="@style/TextContent.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/followers"
        android:textSize="16sp"
        card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
        card_view:layout_constraintTop_toTopOf="@+id/img_item_avatar" />

    <TextView
        android:id="@+id/tv_item_following"
        style="@style/TextContent.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/following"
        android:textSize="16sp"
        card_view:layout_constraintEnd_toStartOf="@+id/tv_item_repository"
        card_view:layout_constraintHorizontal_bias="0.54"
        card_view:layout_constraintStart_toEndOf="@+id/tv_item_followers"
        card_view:layout_constraintTop_toTopOf="@+id/img_item_avatar" />

    <TextView
        android:id="@+id/tv_item_repository"
        style="@style/TextContent.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/repository"
        android:textSize="16sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="@+id/img_item_avatar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_location"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/tab_layout"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:srcCompat="@drawable/ic_favorite_border_24"
        android:focusable="true"
        android:contentDescription="@string/button_favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>